[package]
name = "merkelizedagg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-lib = {git = "https://codeberg.org/ark-bitcoin/bark"}
secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = [ "serde" ] }
bitcoin = "0.32.4"
once_cell ="1.20.2"
hex = "0.4"
rand = { version = "*", features = [ "small_rng" ] }
secp256kfun = "0.10"
schnorr_fun = "0.10"
sha2 = "0.10"
rand_chacha = { version = "0.3" }
